added nav bar and footer to homepage

--- a/index.html
+++ b/index.html
@@ -11,13 +11,28 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz@0,9..40;1,9..40&family=Lora:ital,wght@0,400..700;1,400..700&family=Playwrite+AR&family=VT323&display=swap" rel="stylesheet">
+
 </head>
 <body>
+  <img src="assets/kiki.gif">
   <div class="background"></div>
   <div class="content">
+   
     <h1>Welcome to "La Vie en Ghibli"</h1>
     <p> A website created for all Ghibli enthusiasts who want to explore more about the universe created by Hayao Miyazaki.<br>
-        Here you can find information about the recipes inspired from Studio Ghibli movies, shopping ghibli themed items and more!</p>
+        Here you can find delicious recipes inspired by Studio Ghibli movies, shopping Ghibli-themed items and so much more!</p>
   </div>
+
+<nav>
+  <a href="">Recipes</a>
+  <a href="">Shop</a>
+  <a href="">Travel</a>
+  <a href="">Recommendations</a>
+</nav>
+
+<footer>
+  <h4>&copy; cdp 2024</h4>
+</footer>
+
 </body>
 </html>
