--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         Here you can find delicious recipes inspired by Studio Ghibli movies, shopping Ghibli-themed items and so much more!</p>
   </div>
 
-<nav>
-  <a href="">Recipes</a>
+<div class=navbar>
+  <a href="/recipes.html">Recipes</a>
   <a href="">Shop</a>
   <a href="">Travel</a>
   <a href="">Recommendations</a>
-</nav>
+</div>
 
 <footer>
   <h4>&copy; cdp 2024</h4>
