shop page begin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class=navbar>
   <a href="/recipes.html">Recipes</a>
-  <a href="">Shop</a>
+  <a href="/shop.html">Shop</a>
   <a href="">Travel</a>
   <a href="">Recommendations</a>
 </div>
