--- a/recipes.html
+++ b/recipes.html
@@ -18,8 +18,8 @@
 <div class="background"></div>
 
 <div class=navbar>
-    <a href="">Recipes</a>
-    <a href="">Shop</a>
+    <a href="/recipes.html">Recipes</a>
+    <a href="/shop.html">Shop</a>
     <a href="">Travel</a>
     <a href="">Recommendations</a>
     </div>
