--- a/shop.html
+++ b/shop.html
@@ -24,16 +24,16 @@
     <a href="">Recommendations</a>
     </div>
 
-<div class="content">
-
-    <div class="item1">
+<section class="contentRow">
+    <section class="item-1">
         <p>Studio Ghibli Themed Cup</p>
-        <a href="https://www.etsy.com/au/listing/1761848579/anime-ceramic-cup-studio-ghibli-themed?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=ghibli&ref=sr_gallery-1-3&ret=1&content_source=7a194afc2772f0e10806a826d8b81fa219453ad0%253A1761848579&search_preloaded_img=1&organic_search_click=1" target="_blank" rel="noopener norefferer">
+        <a href="https://www.etsy.com/au/listing/1761848579/anime-ceramic-cup-studio-ghibli-themed?ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=ghibli&ref=sr_gallery-1-3&ret=1&content_source=7a194afc2772f0e10806a826d8b81fa219453ad0%253A1761848579&search_preloaded_img=1&organic_search_click=1" target="_blank" rel="noopener noreferrer">
             <img src="https://i.etsystatic.com/42033239/r/il/b9a2cb/6124763788/il_1588xN.6124763788_4sr0.jpg" alt="Kiki delivery cup">
         </a>
-    </div>
+        <h5>Description: Anime Ceramic Cup| Studio Ghibli Themed Cup| Peek a boo Cup| Handmade Ceramic Mug| Coffee Tea Cup| Jiji| Kikis Delivery Service</h5>
+    </section>
 
 
-</div>
+</section>
 </body>
 </html>
