--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div class=navbar>
   <a href="/recipes.html">Recipes</a>
   <a href="/shop.html">Shop</a>
-  <a href="">Travel</a>
-  <a href="">Recommendations</a>
+  <a href="travel.html">Travel</a>
+  <a href="recs.html">Recommendations</a>
 </div>
 
 <footer>
