--- a/recipes.html
+++ b/recipes.html
@@ -20,7 +20,7 @@
 <div class=navbar>
     <a href="/recipes.html">Recipes</a>
     <a href="/shop.html">Shop</a>
-    <a href="">Travel</a>
+    <a href="/travel.html">Travel</a>
     <a href="">Recommendations</a>
     </div>
 
