feat: travel page with titles and brief description

--- a/recs.html
+++ b/recs.html
@@ -43,7 +43,7 @@
 <div class = "content">
     <h4>Violet Evergarden </h4>
     <p>If I have to think about a comfort anime to watch over and over again it would be "Violet Evergarden". Violet is a 14 year girl used as a 
-        weapon in the army, who finds herself picking up pieces of her broken soul after a terrible accident after which she not loses both arms, but also 
+        weapon in the army, who finds herself picking up pieces of her broken soul after a terrible accident after which she not only loses both arms, but also 
         an important figure in her life. She will need to learn how to be human again, and learn how to live with trauma. 
     </p>
 
@@ -52,12 +52,12 @@
 </div>
 
 <div class="content">
-    <h2>Frieren:Beyond Journey's End </h2>
+    <h4>Frieren:Beyond Journey's End </h4>
     <img src="https://64.media.tumblr.com/273e48159243483a123f127ed79656d1/88844ae8be4d1091-9c/s540x810/739d22f7e20649a0694419eaa39a0f9b4c5bac59.gif">
 
-    <p>Another amazing anime that follows an ancient elf mage, Frieren, who after the death of her companions celebrated as heroes, she relives the journey she and her 
+    <p>Another amazing anime that follows an ancient elf mage, Frieren, who relives the journey she and her 
         companions did 80 years prior. It's a story of love, death and passing of time. <br>
-       <i> "Slaying the demon king was one chapter but we will live on. We've stories yet to tell and lives yet to live."</i>
+       <i style="color: #3f5f36;"> "Slaying the demon king was one chapter but we will live on. We've stories yet to tell and lives yet to live."</i>
     </p>
 
 
