--- a/travel.html
+++ b/travel.html
@@ -29,12 +29,63 @@
 
         <p>In Hayao Miyazaki's movies he takes inspiration from various locations, first of all Japan. </p>
 
-        <h4>-Edo-Tokyo Open-Air Architectural Museum 🍦🔖</h4>
-        <p>Description </p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias hic quasi impedit unde, atque nihil mollitia molestiae tempora vel dignissimos. Repellendus similique unde consequuntur ducimus nesciunt. Perspiciatis consectetur earum vel!</p>
+        <h4>Howl's Moving Castle 🍦🔖</h4>
+        <p>Colmar (France) is said to be the main inspiration for Studio Ghibli's "Howl's Moving Castle". The town is characterized
+            by pastel colored houses bracketed by wooden beams, a canal running through the streets and flowers. 
+            Additionally, Copenhagen and the English town of Cornwall are also reminescents of the movie's locations. 
+        </p>
+    
+    </div>
+
+    <div class="content">
+        <h4>Spirited Away 🐉🚃</h4>
+        <p>The first thing that comes to mind when thinking of "Spirited Away" is the grandiose red bathhouse, where the majority of the story takes place.
+            It was inspired by two locations : the Dogo Onsen BAth House in Matsuyama (Japan) and the second being the town of Jiufen in Taiwan. 
+        </p>
+    </div>
+
+    <div class="content">
+        <h4>Princess Mononoke</h4>
+        <p>The thick forests populated by scary but also adorable creatures is inspired by Yakushima Islan in Japan, which is popular among locals for the enchanting forest that is part of the island. 
+            Moreover, the thatched-roofed houses of Shirakawa go might have inspired the film's Iron town. 
+        </p>
+    </div>
+
+    <div class="content">
+        <h4>My Neighbour Totoro</h4>
+        <p> In contrast to the wild and dangerous nature in "Princess Monoke", the rice fields in "My Neighbour Totoro" are calm and sweet. 
+            Here we find two sister giggling around their backyard and stumbling upon a fluffy Totoro. 
+            The setting of the movie is inspired by Sayama Hills (Japan). 
+
+        </p>
+    </div>
+
+    <div class="content">
+        <h4>Kiki's Delivery Service</h4>
+        <p>Now we head towards northen Europe where it takes place the location of my favourite Ghibli's movie: "Kiki's Delivery Service".
+            The town that inspired Miyazaki and his team is Visby, in Sweden, a port city looking over the Baltic Sea. The town has many churches and hills.
+        </p>
+    </div>
 
 
+    <div class="content">
+        <h4>Ponyo</h4>
+        <p>"Ponyo" , with its oceans and strange creatures is said to be inspired from a town named Tomonoura based in Hiroshima's Prefecture. </p>
+    </div>
 
+    <div class="content">
+        <h4>The Castle in the Sky</h4>
+        <p></p>
+    </div>
+
+    <div class="content">
+        <h4>Porco Rosso</h4>
+        <p></p>
+    </div>
+
+    <div class="content">
+        <h4>Nausicaa of the Valley of the Wind</h4>
+        <p></p>
     </div>
 </body>
 </html>
