feat: added button to travel and recs pages, added some images in travel page

--- a/recs.html
+++ b/recs.html
@@ -59,7 +59,9 @@
         companions did 80 years prior. It's a story of love, death and passing of time. <br>
        <i style="color: #3f5f36;"> "Slaying the demon king was one chapter but we will live on. We've stories yet to tell and lives yet to live."</i>
     </p>
-
+    <div class="button">
+        <a href="index.html">Go back to homepage</a>
+    </div>
 
 </div>
 </body>
