feat: finished travel page and fixed footer

--- a/recipes.html
+++ b/recipes.html
@@ -28,7 +28,7 @@
     <h2>🥨  Ghibli-themed Recipes 🥓</h2>
 
     <p>One of the most memorable and central part of every Miyazaki's movie are food scenes. <br>
-        The level of detail and dedication put into crafting those scene are not only enjoyable, they also feel like a sort of calming ritual for both the character and the viewer, so this page is dedicated to all the food-lovers that would enjoy to recreate the recipes from their favorite Ghibli movie! <br>
+        The level of detail and dedication put into crafting those scene are not only enjoyable, they also feel like a sort of calming ritual for both the character and the viewer. <br> This page is dedicated to all the food-lovers that would enjoy to recreate the recipes from their favorite Ghibli movie! <br>
         Here are some videos and blogs on how to try the delicious food by yourself: 
     </p>
 
@@ -75,7 +75,7 @@
     <p>Video by <a href="" alt="Babish Culinary Universe" target="_blank">Babish Culinary Universe</a></p>
 
 
-  <div>
+<div>
     <a href="index.html">Go back to homepage</a>
 </div>
      
@@ -87,7 +87,7 @@
 
 
 <footer>
-<h4>&copy; cdp 2024</h4>
+<h5>&copy; cdp 2024</h5>
 </footer>
 
 </body>
