feat: fixed responsiveness navbar and img

--- a/recipes.html
+++ b/recipes.html
@@ -34,7 +34,7 @@
 
     <h3> - Herring pot pie from Kiki’s Delivery Service 🐟</h3>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/s1IhgnP8GDo?si=3CtAiTAQY6t9_Mni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="70%" height="500" src="https://www.youtube.com/embed/s1IhgnP8GDo?si=3CtAiTAQY6t9_Mni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <p>Video by <a href="https://youtube.com/@choki?si=UC_LwLzvESx5Cckr" alt="Choki" target="_blank">Choki</a></p>
     
@@ -45,19 +45,19 @@
     
     <h3>- Kiki's Delivery Service Chocolate Cake 🍫</h3>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/kSLvQaXFaZ0?si=FJ7w8lSwDgD1u5Mz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="70%" height="500" src="https://www.youtube.com/embed/kSLvQaXFaZ0?si=FJ7w8lSwDgD1u5Mz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <p>Video by <a href="https://youtube.com/@choki?si=UC_LwLzvESx5Cckr" alt="Choki" target="_blank">Choki</a></p>
 
     <p>- Ponyo's Ramen Noodles 🍜</p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/HTcO3YXlPJY?si=L1cJhVThlRa1ikBL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="70%" height="500" src="https://www.youtube.com/embed/HTcO3YXlPJY?si=L1cJhVThlRa1ikBL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <p>Video by <a href="https://youtube.com/@choki?si=UC_LwLzvESx5Cckr" alt="Choki" target="_blank">Choki</a></p>
 
     <h3>- When Marnie Was There 🧺 Marnie's Picnic Basket and Thumbprint Cookies</h3>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/0BZ1rA59BiU?si=Wm1b6DHHcnGrxubI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="70%" height="500" src="https://www.youtube.com/embed/0BZ1rA59BiU?si=Wm1b6DHHcnGrxubI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <p>Video by <a href="https://youtube.com/@rinkahomejp?si=f0H_feqK69N18N_E" alt="Rinka Home" target="_blank">Rinka Home</a></p>
 
@@ -65,12 +65,12 @@
 
     <h3>- Howl's Moving Castle Bacon and Eggs Breakkie 🥓</h3>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QEDFVRnEb3s?si=T9DegEt_QAYt2dHt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="70%" height="500" src="https://www.youtube.com/embed/QEDFVRnEb3s?si=T9DegEt_QAYt2dHt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <p>Video by <a href="https://youtube.com/@ricotasty?si=SQIhgi_jkyARzG3J" alt="RICO" target="_blank">RICO</a></p>
 
     <h3>- Giant Red Bean Bun from Spirited Away 🐉 </h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ct9PksHLGKQ?si=TZy3cSdsjDBoFNlS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="70%" height="500" src="https://www.youtube.com/embed/Ct9PksHLGKQ?si=TZy3cSdsjDBoFNlS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <p>Video by <a href="" alt="Babish Culinary Universe" target="_blank">Babish Culinary Universe</a></p>
 
