feat: fixed kiki img dimensions

--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,9 @@
 
 </head>
 <body>
-    <a href="/index.html"><img src="assets/kiki.gif" alt="Homepage"></a>
+    <a href="/index.html"> 
+        <img id="kikigif" src="assets/kiki.gif" alt="Homepage">
+    </a>
 <div class="background"></div>
 
 <div class=navbar>
