--- a/recipes.html
+++ b/recipes.html
@@ -22,7 +22,7 @@
     <a href="/recipes.html">Recipes</a>
     <a href="/shop.html">Shop</a>
     <a href="/travel.html">Travel</a>
-    <a href="">Recommendations</a>
+    <a href="/recs.html">Recommendations</a>
     </div>
 
 <div class="content">
