--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
     <a href="/recipes.html">Recipes</a>
     <a href="/shop.html">Shop</a>
     <a href="/travel.html">Travel</a>
-    <a href="">Recommendations</a>
+    <a href="/recs.html">Recommendations</a>
     </div>
 
 <section class="contentRow">
