fix: aligned center text in shop page + fix city name

--- a/travel.html
+++ b/travel.html
@@ -150,7 +150,7 @@
     <p>Marco Pagot also known as Porco Rosso ("Red Pig" in Italian) is a WWI fighter pilot who has been transformed into a pig due to a curse and he protects italian ships from pirates in the Adriatic sea.
         Porco's secret hideout is based on a cove in the Croatian Island of Vis. 
         <br>
-        <a href="https://www.adventurouskate.com/vis-croatia-travel-vis-island/">Vis</a>
+        <a href="https://www.adventurouskate.com/vis-croatia-travel-vis-island/">The City of Vis</a>
         <img src="https://64.media.tumblr.com/563a9092c3abb6acd8723972beac5881/tumblr_nlnwbj1qRl1u791p4o3_400.gif" style="max-width: 30%; margin-left: 2em;">
     </p>
 
