feat: added news page

--- a/recs.html
+++ b/recs.html
@@ -25,6 +25,7 @@
     <a href="/shop.html">Shop</a>
     <a href="travel.html">Travel</a>
     <a href="recs.html">Recommendations</a>
+    <a href="/news.html">News</a>
 </div>
 
 <div class="content">
