--- a/travel.html
+++ b/travel.html
@@ -16,14 +16,15 @@
 </head>
 <body>
     <a href="/index.html"><img src="assets/kiki.gif" alt="Homepage"></a>
-<div class="background"></div>
+    <div class="background"></div>
 
-<div class=navbar>
-    <a href="/recipes.html">Recipes</a>
-    <a href="/shop.html">Shop</a>
-    <a href="/travel.html">Travel</a>
-    <a href="/recs.html">Recommendations</a>
-</div>
+    <div class=navbar>
+        <a href="/recipes.html">Recipes</a>
+        <a href="/shop.html">Shop</a>
+        <a href="/travel.html">Travel</a>
+        <a href="/recs.html">Recommendations</a>
+        <a href="/news.html">News</a>
+    </div>
 
 <div class="content">
     <h2>Travel spots that inspired Ghibli's movies: </h2>
@@ -163,7 +164,7 @@
 
 
 <footer>
-    <h5>&copy; cdp 2024</h5>
+    <h5>cdp &copy; made with 🍵 </h5>
 </footer>
 
 
