--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <a href="/shop.html">Shop</a>
   <a href="travel.html">Travel</a>
   <a href="recs.html">Recommendations</a>
+  <a href="/news.html">News</a>
 </div>
 
 <footer>
