feat: added p to news

--- a/news.html
+++ b/news.html
@@ -39,15 +39,22 @@
             almost as saying that it wasn't "ghibli-like" as the previous movies. 
             <br>
             It was a "different" movie, for sure. There was no cutesy stuff and boy that would make turn heads (like Howl for example), and I feel like this was Miyazaki's intention all along, 
-            like a sort of statement that some thought it was a final goodbye to his legacy as director. 
+            like a sort of statement. Some even thought it was a final goodbye to his legacy as director. 
             Is it though? 
             <br> 
-            Miyazaki is funnily famous in the animation community for saying that each movie he makes would be the last. But as he said at the end of the documentary "Hayao and the Heron"
+            Miyazaki is jokingly famous for saying that each movie he makes would be the last. But as he said at the end of the documentary "Hayao and the Heron"
             (which I recommend watching), he tells the viewer that he makes movies for the loved ones he lost through the years. 
             <br>
-            He feels the weight of the words people told him before passing, and as shadows (or spirits as he refers) they loom over him in his wake. 
+            He feels the weight of the words people told him before passing, and as shadows (or 'spirits' as he refers) they loom over him in his wake. 
 
             <img src="https://64.media.tumblr.com/3829d01dcb591480ab3f8f4be1195d63/9cd394ee6d1ad57b-66/s540x810/b86ed08e09e6b70e2d12c5537c60c852a7e5ec99.gif" style="max-width: 30%; margin-left: 2em;">
+
+            <br>
+            The Boy and the Heron is a movie about loss, and how to move forwards. It's about finding our own identity and accepting ourselves as we are. 
+            Mahito lived a traumatic experience (a fire that destroyed Tokyo and where he lost his mother) and had to move away from home to live with his expecting aunt (hauntingly similar to his mother) which his father married,
+            to being bullied at school. 
+            The scene were on the way home picks up a rock and smashes it to his head after fighting with other kids, could symbolize the need to feel something, as I interpret. 
+            In the first part of the movie we see Mahito being stoic, almost like a soldier (well spread mentality during WWII) and stoic he remains after smashing his head with the rock and going home as if nothing happened. 
 
              
         </p>
