feat: added img in news

--- a/news.html
+++ b/news.html
@@ -34,6 +34,8 @@
             <br>
             It narrates the story of a young boy, Mahito, who after losing his mother in a tragic incident, travels to a magical kingdom <br>
             with the guidance of a heron as he tries to find his place in an unforgiving world. 
+
+            <img src="https://i.pinimg.com/736x/2b/6e/1c/2b6e1cba91e541435ac94c5410ae3f72.jpg" style="max-width: 30%; margin-left: 2em;">
             <br>
             The movie came out in Japan's theathers in the summer of 2023 and even though it was a blatantly success, many viewers and fans were left skeptical of the story's meaning, 
             almost as saying that it wasn't "ghibli-like" as the previous movies. 
