fix: revised version of the boy and the heron commentary

--- a/news.html
+++ b/news.html
@@ -57,13 +57,11 @@
             <img src="https://64.media.tumblr.com/3829d01dcb591480ab3f8f4be1195d63/9cd394ee6d1ad57b-66/s540x810/b86ed08e09e6b70e2d12c5537c60c852a7e5ec99.gif" style="max-width: 80%; margin: 1em;">
 
             <br>
-            The Boy and the Heron is a movie about loss, and how to move forwards. It's about finding our own identity and accepting ourselves as we are. 
-            Mahito lived a traumatic experience (a fire that destroyed Tokyo and where he lost his mother) and had to move away from home to live with his expecting aunt (hauntingly similar to his mother) which his father married,
-            to being bullied at school. 
-            The scene were on the way home picks up a rock and smashes it to his head after fighting with other kids, could symbolize the need to feel something, as I interpret. 
-            In the first part of the movie we see Mahito being stoic, almost like a soldier (well spread mentality during WWII) and stoic he remains after smashing his head with the rock and going home as if nothing happened. 
+            The Boy and the Heron explores themes of loss, self-acceptance, and moving forward. The story follows Mahito, a boy who endures a traumatic experience—the devastating fire that destroyed Tokyo and took his mother’s life. Forced to leave his home, he moves in with his father and his pregnant new wife, who bears an uncanny resemblance to his late mother. At school, he faces bullying, further deepening his sense of isolation.
             <br>
-            In the end he becomes more at peace with himself and willing to live. 
+            One particularly striking scene shows Mahito, after a fight with his classmates, picking up a rock and smashing it against his own head. This moment could symbolize his need to feel something—perhaps an attempt to break through his emotional numbness. Throughout the first part of the film, Mahito carries himself with a stoic demeanor, almost like a soldier—a mindset that was widely encouraged during World War II. Even after hurting himself, he remains composed, walking home as if nothing had happened.
+            <br>
+            By the end of the film, however, Mahito undergoes a transformation. He becomes more at peace with himself, no longer suppressing his emotions, and finds a renewed willingness to embrace life.
             <br>
             
             <h4>
